# roaming-panda-ad-fusion-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
addin/: FusionMCP.manifest  FusionMCP.py  __init__.py  fusion_api.py  rest_server.py
src/fusion360_mcp/: __init__.py  __main__.py  cli.py  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_fusion_api.py  test_main.py  test_server.py
