[project]
name = "roaming-panda-ad-fusion-mcp"
version = "0.1.0"
description = "MCP server for Autodesk Fusion 360"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Mark Ng", email = "mark@roaming-panda.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx",
    "starlette",
    "uvicorn",
    "click",
]

[project.scripts]
roaming-panda-ad-fusion-mcp = "fusion360_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion360_mcp"]
