[project]
name = "roaming-panda-ad-fusion-mcp"
version = "0.1.0"
description = "MCP server for Autodesk Fusion 360"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Mark Ng", email = "mark@roaming-panda.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "httpx",
    "starlette",
    "uvicorn",
    "click",
]

[project.scripts]
roaming-panda-ad-fusion-mcp = "fusion360_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-describe>=2.2",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mutmut>=3.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fusion360_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["src/fusion360_mcp"]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mutmut]
paths_to_mutate = ["src/fusion360_mcp/"]
tests_dir = ["tests/"]
debug = true

# Functions to skip from mutation testing:
# - main: Entry point, already excluded via pragma: no cover
# - create_app: Factory function with framework configuration that requires integration tests
# The timeout values (300.0) and framework config parameters cannot be unit tested practically

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
